# svc_host

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
src/: logger.cpp  logger.hpp  main.cpp  service_host.cpp  service_host.hpp
